--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@tauri-apps/plugin-fs": "^2.4.5",
     "@tauri-apps/plugin-opener": "^2",
     "@tauri-apps/plugin-shell": "^2.3.5",
+    "@tauri-apps/plugin-store": "^2.4.2",
     "@types/react-syntax-highlighter": "^15.5.13",
     "@types/three": "^0.183.0",
     "@uiw/react-textarea-code-editor": "^3.1.1",
